<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_baby"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_baby" />
        <item
            android:id="@+id/nav_vaccine"
            android:icon="@drawable/injec"
            android:title="@string/menu_vaccine" />
        <item
            android:id="@+id/nav_feeding"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/menu_feed" />

        <item
            android:id="@+id/nav_features"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_features" />
        <item
            android:id="@+id/nav_email"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_email" />
        <item
            android:id="@+id/nav_share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_share" />


    </group>
</menu>