<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:id="@+id/line_vchart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/vduedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/dDate"
            android:layout_marginLeft="5dp"
            android:textColor="#ff4a004a"
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/vname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:gravity="right"
            android:text="@string/vaccine_text"
            android:textColor="#ff4a004a"
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>
    <RelativeLayout
            android:id="@+id/vstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/line_vchart"
            android:orientation="horizontal"
            >


        <TextView
            android:id="@+id/vgivendate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:text="@string/given_date"
            android:layout_marginLeft="5dp"
            android:textColor="#ff4a004a"
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_alignParentLeft="true"
            />

        <Button
                android:id="@+id/vupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/update"
                android:layout_marginEnd="5dp"
                android:textColor="#ff4a004a"
                android:textSize="14.0sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:layout_alignParentRight="true"
            />

        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
