<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appbar"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <Button
            android:id="@+id/btn_features"
            style="@style/ButtonText"
            android:layout_below="@id/appbar"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:padding="5dp"
            android:onClick="onFeatures"
            android:text="@string/feature_app" />


        <Button
            android:id="@+id/btn_feadback"
            style="@style/ButtonText"
            android:layout_below="@id/btn_features"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:padding="5dp"
            android:onClick="onFeedbck"
            android:text="@string/mail" />

        <Button
            android:id="@+id/share"
            style="@style/ButtonText"
            android:layout_below="@id/btn_feadback"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:padding="5dp"
            android:onClick="onShare"
            android:text="@string/share" />


    </RelativeLayout>

</ScrollView>